# fake-switches

./: .gitignore  .travis.yml  Dockerfile  README.md  constraints-py27.txt  constraints.txt  docker-compose.yml  main.py  requirements.txt  setup.cfg  test-constraints-py27.txt  test-constraints.txt  test-requirements.txt  tox.ini
.github/workflows/: release.yaml  unittests.yml
fake_switches/: __init__.py  ssh_service.py  switch_configuration.py  switch_core.py  switch_factory.py  telnet_service.py
fake_switches/adapters/: tftp_reader.py
fake_switches/arista/: arista_core.py  eapi.py
fake_switches/brocade/: brocade_core.py
fake_switches/cisco/: cisco_core.py
fake_switches/cisco6500/: cisco_core.py
fake_switches/cmd/: main.py
fake_switches/command_processing/: base_command_processor.py  command_processor.py  piping_processor_base.py  shell_session.py  switch_tftp_parser.py
fake_switches/dell/: dell_core.py
fake_switches/dell10g/: dell_core.py
fake_switches/hp_procurve/: hp_procurve_core.py
fake_switches/juniper/: juniper_core.py  juniper_netconf_datastore.py  juniper_qfx_copper_core.py  juniper_qfx_copper_netconf_datastore.py
fake_switches/juniperQfxCopper/: juniper_qfx_copper_core.py  juniper_qfx_copper_netconf_datastore.py
fake_switches/juniper_mx/: juniper_mx_core.py  juniper_mx_netconf_datastore.py
fake_switches/juniper_qfx_copper/: juniper_ex3300_core.py  juniper_qfx_copper_core.py  (+1 more)
fake_switches/telnet/: __init__.py  (+1 more)
tests/: __init__.py  test_group_sequences.py  test_simultaneous_connections.py  test_switch_factory.py  test_transports.py
(+105 files in other folders)
