[metadata]
name = fake-switches
author = Enlightenment Team
author-email = lindycoder@gmail.com
summary = Fake switches collection for tests against "real" material without the hardware

[files]
packages =
    fake_switches

[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=INFO

[wheel]
universal = 1
