[metadata]
name = fake-switches
url = https://github.com/internaphosting/fake-switches
author = Internap Hosting
author-email = opensource@internap.com
summary = A pluggable switch/router command-line simulator
description-file = README.md
license = Apache Software License
home-page = https://github.com/internap/fake-switches
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[files]
packages =
    fake_switches

[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=INFO
verbosity = 2

[wheel]
universal = 1
